--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "A Unified Probabilistic Framework for Non-Stationary Heart Rate Variability Analysis"
-subtitle: "Modeling and Mechanistically Interpreting the Dynamic Evolution of Autonomic Control"
+subtitle: "Modeling the Dynamic Evolution of Autonomic Control"
 date-modified: today
 execute: 
   echo: false
@@ -57,30 +57,24 @@ theme_set(
 
 ## Model Formulation
 
-We model the R–R interval (RRi) signal, observed at a discrete set of time points $\{t_i\}_{i=1}^N$, as a probabilistic process. The model decomposes the signal into a deterministic mean trajectory, $\mu(t_i)$, and a time-varying total standard deviation, $\sigma_{\text{total}}(t_i)$. This approach allows for a principled separation of the underlying physiological trends from the structured and unstructured components of heart rate variability. The complete observation model is defined by the Normal likelihood in @eq-full-likelihood.
+We model the R–R interval (RRi) signal, observed at a discrete set of time points $\{t_i\}_{i=1}^N$, as a probabilistic process. The model's central thesis is that the signal can be generated from two fundamental, time-varying trajectories: a deterministic mean, $\mu(t_i)$, and a total standard deviation, $\mathrm{SDNN}(t_i)$. This approach provides a principled framework for understanding the interplay between underlying physiological trends and the dynamics of heart rate variability. The complete observation model is defined by the Normal likelihood in @eq-full-likelihood.
 
 $$
-\mathrm{RRi}(t_i) \sim \mathcal{N}\big(\mu(t_i), \sigma_{\text{total}}(t_i)\big)
+\mathrm{RRi}(t_i) \sim \mathcal{N}\big(\mu(t_i), \mathrm{SDNN}(t_i)\big)
 $${#eq-full-likelihood}
 
-The core of the model lies in the detailed, mechanistic construction of the mean and standard deviation components. The mean trajectory, $\mu(t_i)$, is a superposition of a smoothly varying baseline and a synthesized structured signal, as shown in @eq-mean-model.
+The core of the model lies in the detailed, mechanistic construction of these two components from a shared set of underlying dynamic functions. The mean trajectory, $\mu(t_i)$, is a superposition of a smoothly varying baseline trend and a synthesized, structured noise signal, as shown in @eq-mean-model.
 
 $$
 \mu(t_i)
 = \underbrace{\mathrm{RR}(t_i)}_{\substack{\text{Gross}\\\text{RRi Trend}}}
 +
-\underbrace{A(t_i) \cdot \sum_{j=1}^{J} p_j(t_i) \cdot S_j(t_i)}_{\substack{\text{Scaled Structured Variability}}}
+\underbrace{A(t_i) \cdot \sum_{j=1}^{J} p_j(t_i) \cdot S_j(t_i)}_{\substack{\text{Unit-Variance Structured Noise}}}
 $${#eq-mean-model}
 
-Here, $\mathrm{RR}(t_i)$ represents the gross, underlying heart period trajectory. The structured variability component is synthesized from a set of spectral oscillators, $S_j(t_i)$, which represent activity in different physiological frequency bands ($j=1,2,3$ for VLF, LF, and HF, respectively). These oscillators are weighted by time-varying proportions, $p_j(t_i)$, and their overall magnitude is governed by a time-varying scaling amplitude, $A(t_i)$.
+Here, $\mathrm{RR}(t_i)$ represents the gross, underlying heart period trajectory. The structured noise component is synthesized from a set of spectral oscillators, $S_j(t_i)$, which represent activity in different physiological frequency bands ($j=1,2,3$ for VLF, LF, and HF, respectively). These oscillators are weighted by time-varying proportions, $p_j(t_i)$. Their combined magnitude is governed by an internal amplitude normalization factor, $A(t_i)$, which ensures this entire structured component has a standard deviation of exactly one at all times.
 
-Crucially, the total variance is partitioned into two independent sources: the variance of the structured signal, which is explicitly modeled by a target dynamic trajectory $\mathrm{SDNN}(t_i)^2$, and the variance of a residual, unstructured noise process, $\sigma^2$. The total standard deviation is therefore defined as in @eq-sigma-total.
-
-$$
-\sigma_{\text{total}}(t_i) = \sqrt{\mathrm{SDNN}(t_i)^2 + \sigma^2}
-$${#eq-sigma-total}
-
-This formulation explicitly models the time dependency of all major components, obviating the need for traditional sliding-window decompositions. It facilitates a unified analysis that simultaneously captures phenomena in both the time and frequency domains.
+The model's second primary output, the $\mathrm{SDNN}(t_i)$ trajectory, represents the total instantaneous standard deviation of the RRi signal. By directly modeling this quantity and supplying it to the likelihood, the framework parsimoniously captures the complete time-dependent evolution of heart rate variability without needing to estimate a separate residual error term. This formulation facilitates a unified analysis that simultaneously captures phenomena in both the time and frequency domains, obviating the need for traditional sliding-window decompositions.
 
 ### Baseline Heart Period: $\mathrm{RR}(t_i)$
 
@@ -106,13 +100,13 @@ $${#eq-logistic-components}
 
 The shared timing parameters govern these transitions: $\tau$ is the inflection point (midpoint) of the initial decline, whose rate is controlled by $\lambda$. The second transition is offset from the first by a delay $\delta$, and its rate is governed by $\phi$. This specific formulation directly estimates physiologically salient time points and magnitudes, facilitating enhanced mechanistic interpretation and improved comparability across different experimental conditions.
 
-### Decomposition of Variability: Target SDNN and Amplitude Inversion
+### Generative Model for Signal Variability
 
-A key innovation of this framework is the explicit decomposition of the signal's variability. We distinguish between the target magnitude of structured variability and the mechanism for synthesizing it.
+A key innovation of this framework is its generative approach to signal variability. Instead of treating variability as a residual property, the model explicitly defines and constructs the dynamic trajectory of the signal's total standard deviation.
 
-#### Target Structured Variability: $\mathrm{SDNN}(t_i)$
+#### Total Instantaneous Variability: $\mathrm{SDNN}(t_i)$
 
-We generalize the conventional, static notion of SDNN (the standard deviation of normal-to-normal intervals) to a dynamic quantity, $\mathrm{SDNN}(t_i)$, which represents the target instantaneous standard deviation of the structured portion of the RRi signal. By modeling this trajectory directly, we can capture how the overall "strength" of autonomic modulation evolves over time. To maintain parsimony and interpretability, the $\mathrm{SDNN}(t_i)$ trajectory is modeled using the same double-logistic functional form as the baseline RRi, as defined in @eq-sdnn-model.
+We generalize the conventional, static notion of SDNN (the standard deviation of normal-to-normal intervals) to a dynamic quantity, $\mathrm{SDNN}(t_i)$. In this revised framework, $\mathrm{SDNN}(t_i)$ represents the total instantaneous standard deviation of the RRi signal. It is the parameter that governs the dispersion of the Normal likelihood at each time point. By modeling this trajectory directly, we can capture how the overall "strength" of autonomic modulation and other sources of variability evolves over time. To maintain parsimony and enforce a strong theoretical link between changes in mean and variability, the $\mathrm{SDNN}(t_i)$ trajectory is modeled using the same double-logistic functional form as the baseline RRi, as defined in @eq-sdnn-model.
 
 $$
 \mathrm{SDNN}(t_i) =
@@ -123,33 +117,29 @@ $$
 \underbrace{c_s \beta_s \cdot \mathcal{D}_{2}(t_i)}_{\substack{\text{Post-perturbation}\\\text{SDNN Recovery}}}
 $${#eq-sdnn-model}
 
-Here, $\alpha_s$, $\beta_s$, and $c_s$ are analogous to their counterparts in the baseline model, representing the resting SDNN, the magnitude of its suppression, and its fractional recovery, respectively. This trajectory shares the same timing parameters ($\tau, \delta, \lambda, \phi$) as the mean RRi, enforcing the assumption that changes in the magnitude of variability are temporally coupled with changes in the mean heart period.
+Here, $\alpha_s$, $\beta_s$, and $c_s$ are analogous to their counterparts in the baseline model, representing the resting total SDNN, the magnitude of its suppression, and its fractional recovery, respectively. This trajectory shares the same timing parameters ($\tau, \delta, \lambda, \phi$) as the mean RRi, enforcing the strong physiological assumption that changes in the magnitude of variability are temporally coupled with changes in the mean heart period.
 
-#### Deterministic Amplitude Inversion: $A(t_i)$
+#### Internal Amplitude Normalization: $A(t_i)$
 
-The model must ensure that the synthesized structured variability signal, let's call it $X(t_i) = A(t_i) \sum_{j=1}^J p_j(t_i) S_j(t_i)$, has a variance that is precisely equal to the target variance, $\mathrm{SDNN}(t_i)^2$, at every time point. This requires a deterministic calculation for the scaling amplitude, $A(t_i)$.
+The model must synthesize a structured noise signal, let's call it $X(t_i) = A(t_i) \sum_{j=1}^J p_j(t_i) S_j(t_i)$, which contributes to the mean trajectory $\mu(t_i)$. A critical design choice is to separate the modeling of this signal's spectral shape from the modeling of its overall magnitude. The magnitude is governed entirely by the `SDNN(t)` trajectory. Therefore, we require the synthesized signal $X(t_i)$ to be normalized such that its variance is precisely equal to one at every time point. This requires a deterministic calculation for the internal scaling amplitude, $A(t_i)$.
 
 By construction, the spectral oscillator signals $S_j(t_i)$ are standardized to have zero mean and unit variance ($\mathrm{Var}[S_j(t_i)] = 1$). Assuming they are approximately uncorrelated (a reasonable assumption given their differing frequency content and random phases), the variance of their weighted sum is:
 
-$$
-\mathrm{Var}\left[\sum_{j=1}^J p_j(t_i) S_j(t_i)\right] \approx \sum_{j=1}^J p_j(t_i)^2 \mathrm{Var}[S_j(t_i)] = \sum_{j=1}^J p_j(t_i)^2
-$$
+$$\mathrm{Var}\left[\sum_{j=1}^J p_j(t_i) S_j(t_i)\right] \approx \sum_{j=1}^J p_j(t_i)^2 \mathrm{Var}[S_j(t_i)] = \sum_{j=1}^J p_j(t_i)^2$$
 
-The variance of the complete structured signal is then $\mathrm{Var}[X(t_i)] = A(t_i)^2 \sum_{j=1}^J p_j(t_i)^2$. To match our target, we set the standard deviation $\sqrt{\mathrm{Var}[X(t_i)]}$ equal to $\mathrm{SDNN}(t_i)$. Solving for $A(t_i)$ yields the critical inversion formula in @eq-amplitude-inversion.
+The variance of the complete structured noise signal is then $\mathrm{Var}[X(t_i)] = A(t_i)^2 \sum_{j=1}^J p_j(t_i)^2$. To achieve our goal of unit variance, we set $\mathrm{Var}[X(t_i)] = 1$ and solve for $A(t_i)$, which yields the critical normalization formula in @eq-amplitude-inversion.
 
-$$
-A(t_i) = \frac{\mathrm{SDNN}(t_i)}{\sqrt{\sum_{j=1}^J p_j(t_i)^2}}
-$${#eq-amplitude-inversion}
+$$A(t_i) = \frac{1}{\sqrt{\sum_{j=1}^J p_j(t_i)^2}}$${#eq-amplitude-inversion}
 
-This inversion is essential. It decouples the modeling of the total magnitude of variability (governed by the $\mathrm{SDNN}(t_i)$ function) from the modeling of its spectral composition (governed by the proportions $p_j(t_i)$). This separation allows the model to learn, for example, whether a decrease in total HRV is due to a general suppression of autonomic outflow or a specific shift away from a high-power spectral band.
+This normalization is essential. It ensures that the component representing structured noise in @eq-mean-model is a pure, unit-variance process whose spectral character is determined by $p_j(t_i)$ but whose amplitude is fixed. The full, time-varying magnitude of variability is then introduced independently via the $\mathrm{SDNN}(t_i)$ term in the final likelihood (@eq-full-likelihood). This elegant separation allows the model to learn, for example, how the spectral composition of HRV changes, independent of simultaneous changes in its total power.
 
 ### Spectral Components
 
-The spectral character of the structured variability is determined by the properties of the oscillator signals $S_j(t_i)$ and their time-varying weights $p_j(t_i)$.
+The spectral character of the structured noise is determined by the properties of the oscillator signals $S_j(t_i)$ and their time-varying weights $p_j(t_i)$.
 
 #### Dynamic Frequency Band Proportions
 
-The proportions $p_j(t_i)$ dictate how the total structured variance, $\mathrm{SDNN}(t_i)^2$, is allocated across the different frequency bands at each moment. These proportions must satisfy $p_j(t_i) \ge 0$ and $\sum_j p_j(t_i) = 1$ for all $t_i$. The model captures the evolution of these proportions as a smooth transition between two distinct spectral states: a baseline state ($\vec\pi_{\text{base}}$) and a perturbed state ($\vec\pi_{\text{pert}}$). The transition is orchestrated by a single master controller function, $C(t_i)$, as shown in the convex combination of @eq-pj-using-ct.
+The proportions $p_j(t_i)$ dictate how the unit variance of the structured noise is allocated across the different frequency bands at each moment. These proportions must satisfy $p_j(t_i) \ge 0$. While they are not required to sum to one, the structure of the amplitude normalization $A(t_i)$ means they are interpreted as relative contributions to the spectral shape. The model captures the evolution of these proportions as a smooth transition between two distinct spectral states: a baseline state ($\vec\pi_{\text{base}}$) and a perturbed state ($\vec\pi_{\text{pert}}$). The transition is orchestrated by a single master controller function, $C(t_i)$, as shown in the convex combination of @eq-pj-using-ct.
 
 $$
 \vec{p}(t_i) = (1 - C(t_i)) \cdot \vec\pi_{\text{base}} + C(t_i) \cdot \vec\pi_{\text{pert}}
@@ -181,26 +171,10 @@ The single shared parameter $b$ is the spectral exponent. A value of $b=0$ corre
 
 Finally, to fulfill the requirement that $\mathrm{Var}[S_j(t_i)] = 1$, the composite signal $S'_j(t_i)$ undergoes empirical standardization: its sample mean is subtracted, and the result is divided by its sample standard deviation to produce the final normalized oscillator signal, $S_j(t_i)$.
 
-## Discussion
+# Results
 
-The generative model presented for R-R interval dynamics represents a substantial conceptual and methodological advancement in heart rate variability (HRV) analysis, explicitly addressing long-standing limitations within the field. Traditional approaches have consistently encountered an inherent compromise between temporal precision and frequency resolution in spectral techniques, alongside the predominantly descriptive nature of derived metrics that frequently obscure direct insight into underlying physiological mechanisms. Our novel parametric framework aims to transcend these limitations by providing a unified, time-varying representation of baseline heart period, overall variability amplitude, and spectral composition, thereby offering enhanced resolution, transparency, and clinical applicability. This integration into a single, comprehensive generative framework suggests a notable step towards overcoming these pervasive challenges.
+[...].
 
-A cornerstone of this model is its significant capacity to explicitly capture time-varying physiological processes. Unlike conventional fixed-window spectral analyses, which average activity over extended periods and thus inevitably blur transient autonomic events, our approach models each core component as a continuous function of time. The adoption of double-logistic functions for $\mathrm{RR}(t)$ and $\mathrm{SDNN}(t)$ allows for the precise characterization of dynamic changes, such as the onset and recovery kinetics observed during physiological challenges like exercise. This mathematical formulation enables the direct estimation of physiologically relevant indices, including surge onset times, peak amplitudes, and half-recovery durations, which are critical for understanding dynamic autonomic responses but are often obscured by aggregated metrics. For instance, the rapid vagal withdrawal or sympathetic surges occurring during orthostatic challenge or acute stressors, phenomena of substantial clinical relevance, may now be quantified without the analytical dilemma imposed by windowing techniques.
+# Discussion
 
-The model's innovative use of a two-stage stick-breaking decomposition for spectral proportions ($p_j(t)$) further distinguishes it from existing methodologies. This hierarchical approach intrinsically ensures that the proportional contributions of VLF, LF, and HF bands sum to unity at every time point, while simultaneously reducing the latent dimensionality of the system. By modeling the VLF proportion and then the HF-to-LF ratio within the remainder, the model accurately reflects an inherent biological hierarchy in autonomic control over heart rate variability. This contrasts with standard analytical practices that frequently reduce dynamic spectral information into aggregated, static indices like the LF/HF ratio, which can ambiguously represent genuine increases in one component, decreases in another, or simultaneous modulations of both. Our model, by contrast, provides instantaneous, interpretable estimates of each band's dynamic contribution, offering a clearer perspective into the evolving balance of autonomic nervous system activity.
-
-The physiological interpretability of the model's parameters is a considerable advantage. Each parameter within the double-logistic and stick-breaking formulations directly corresponds to a specific aspect of autonomic regulation, such as baseline levels, magnitudes of change, and rates of onset and recovery. This level of direct mechanistic significance, transitioning from descriptive to mechanistic insights, is often less explicit in other advanced HRV analysis techniques, such as nonlinear measures or data-driven decompositions. While methods like entropy or fractal dimension quantify signal complexity, they do not directly map to specific autonomic pathways. Similarly, many machine learning models, despite their predictive power, often operate as opaque "black boxes" devoid of readily apparent mechanistic interpretability. Our generative framework, by contrast, provides a transparent mapping from statistical parameters to physiological constructs, potentially facilitating clearer mechanistic inference and enhancing inter-study comparability.
-
-A crucial implication of this unified generative paradigm is its ability to circumvent the time-frequency trade-off, a persistent methodological challenge in HRV analysis. By explicitly representing each latent component as a continuous, time-varying function, the model estimates instantaneous band-specific power without recourse to arbitrary smoothing or the use of sliding windows, which can temporally blur or obscure rapid sympathetic or parasympathetic modulations. This capability is achieved through the continuous, parametric representation of each component, supporting a high-resolution characterization of autonomic events. This approach may be particularly valuable for detecting abrupt physiological shifts that are often critical for diagnosis and intervention. The model's capacity to deliver precise, transparent, and mechanistically grounded insights into autonomic cardiovascular regulation represents a notable advancement in the field.
-
-Furthermore, the generative nature of our model offers distinct capabilities beyond mere analysis. It can simulate synthetic RRI trajectories under controlled autonomic scenarios, a feature valuable for rigorous power analyses, hypothesis testing, and educational demonstrations. This simulation capability also allows for a deeper understanding of how time-varying frequency band contributions manifest in the overall RRI signal. While these spectral variations might be subtle and not immediately apparent to the unaided eye in a raw RRI time series, their underlying presence is precisely what the model is designed to capture and elucidate. This model represents a promising advancement, aiming to accurately capture the intricate data generation process behind heart rate variability.
-
-Beyond simulation, the model possesses the capability of estimating the temporal fluctuations of a real physiological signal by robustly mimicking its underlying spectral components. This dual capacity for both generation and estimation positions our model as a potentially valuable tool for advancing the understanding of autonomic cardiovascular regulation in both health and disease. In basic research, it could facilitate mechanistic investigations into autonomic regulation, enabling quantitative assessment of coupling between respiratory patterns and heart rate, or precise delineation of recovery kinetics following physical exertion. Clinically, it may offer refined biomarkers for conditions such as dysautonomia, heart failure, and stress-related disorders, thereby potentially enhancing both diagnostic sensitivity and prognostic specificity. For wearable technology and biofeedback applications, the model could support real-time monitoring of autonomic state, which may guide adaptive interventions tailored to instantaneous physiological need. In essence, this formalized, physiologically coherent generative model of HRV aims to reconcile temporal and spectral analysis within a single, interpretable framework. By embedding parametric latent drives for baseline heart period, variability amplitude, and spectral composition, it is anticipated to contribute significantly to HRV research, fostering a transition from descriptive heuristics towards a quantitatively precise science of autonomic cardiovascular dynamics.
-
-### Limitations
-
-Despite its significant advancements, the current generative model possesses certain limitations that warrant consideration. The primary limitation stems from its parametric nature, which relies on a predefined functional form for describing the temporal dynamics of baseline heart period, variability amplitude, and spectral proportions. While the double-logistic function offers considerable flexibility and physiological interpretability, it may not universally capture all conceivable patterns of autonomic modulation, particularly those exhibiting highly irregular or non-monotonic behavior not well approximated by sigmoidal curves. The model also assumes a fixed number of frequency bands and their approximate central frequencies, which might not account for individual variability in spectral composition or shifts in resonant frequencies under extreme physiological states. Furthermore, the current implementation does not explicitly model or differentiate between the precise neural pathways contributing to each frequency band, relying instead on the established physiological interpretation of VLF, LF, and HF components. The generalizability of the proposed parameterization may also be influenced by the specific population and experimental conditions under which the model is applied and validated.
-
-### Future Research
-
-Future research endeavors will focus on expanding the model's capabilities to address its current limitations and unlock further insights into autonomic regulation. One key direction involves exploring more flexible, non-parametric or semi-parametric extensions to the functional forms, allowing for a broader range of temporal dynamics to be accurately captured without sacrificing interpretability where possible. This could include incorporating basis functions or Gaussian processes to model more complex RRI trajectories and spectral shifts. Investigations into data-driven approaches for identifying optimal frequency band definitions and their potential time-varying characteristics are also warranted, moving beyond fixed ranges to account for individual physiological differences. Integrating biophysically detailed models of neural autonomic control into the generative framework represents another promising avenue, which could allow for the explicit modeling of efferent and afferent sympathetic and parasympathetic pathways, thereby providing a more granular understanding of the physiological origins of HRV. Furthermore, rigorous validation across diverse clinical populations and a wider array of physiological challenges is crucial to establish the model's robustness and clinical utility. Comparative studies against state-of-the-art non-linear and machine learning approaches will also be essential to quantitatively demonstrate the enhanced insights provided by our mechanistic, interpretable framework. Ultimately, the development of software tools facilitating the broad adoption and application of this generative model will be paramount for its integration into mainstream HRV research and clinical practice.
+[...].
