exact cov(S_j) estimated in A_j(t) inversion but parameter w is not recoverable

--- a/index.qmd
+++ b/index.qmd
@@ -37,7 +37,7 @@ To advance the field beyond these constraints, a new generation of statistical m
 
 This paper presents a novel probabilistic framework for analyzing non-stationary RRi signals. Our approach directly confronts these challenges by formulating the RRi signal as a continuous stochastic process. This model decomposes the signal into a deterministic mean trajectory and a time-varying total standard deviation, both of which are constructed mechanistically. The model's key innovations include a mechanistic model for the mean RRi that uses a flexible double-logistic function to allow for the direct estimation of physiologically salient parameters, such as the magnitude of heart rate change and the timing of response and recovery. A core innovation is the explicit decomposition of the total signal variance into components representing structured, oscillatory variability and unstructured, residual noise, which is critical for understanding the sources of change in HRV. We generalize the traditional SDNN metric into a time-varying trajectory, which is also modeled using a logistic function analogous to that for the mean RRi, thereby capturing the dynamic suppression and recovery of total variability in a parsimonious manner. A crucial mathematical inversion within the framework ensures that the amplitude of the synthesized structured signal exactly matches the target SDNN trajectory at every time point, effectively decoupling the total magnitude of variability from its spectral composition and enabling more granular analysis. Finally, the model captures the dynamic allocation of power across different physiological frequency bands by modeling their proportions as a function of a smooth master controller, which allows for a detailed analysis of shifts in spectral balance during physiological transitions.
 
-The primary objective of this study is to introduce and validate this novel probabilistic model for the analysis of non-stationary RRi signals. We aim to demonstrate that this framework provides a more robust, informative, and physiologically interpretable analysis of heart rate dynamics than traditional methods. We hypothesize that the model will accurately and robustly capture the complex, time-varying dynamics of both the mean RRi and its variability during transient physiological perturbations. We further propose that the model's parameters will yield enhanced mechanistic insights into autonomic control and cardiovascular regulation, thereby serving as a superior tool for both clinical research and basic physiological investigation. Through this work, we seek to establish a new standard for the analysis of time-varying physiological signals.
+The primary objective of this study is to introduce and validate this novel probabilistic model for the analysis of non-stationary RRi signals. We aim to demonstrate that this framework provides a more robust, informative, and physiologically interpretable analysis of heart rate dynamics than traditional methods. We hypothesize that the model will accurately and robustly capture the complex, time-varying dynamics of both the mean RRi and its variability during transient physiological perturbations. We further propose that the model's parameters will yield enhanced mechanistic nuance into autonomic control and cardiovascular regulation, thereby serving as a superior tool for both clinical research and basic physiological investigation. Through this work, we seek to establish a new standard for the analysis of time-varying physiological signals.
 
 ```{r}
 #| include: false
@@ -63,7 +63,7 @@ $$
 \mathrm{RRi}(t_i) \sim \mathcal{N}\big(\mu(t_i), \mathrm{SDNN}(t_i)\big)
 $${#eq-full-likelihood}
 
-The core of the model lies in the detailed, mechanistic construction of these two components from a shared set of underlying dynamic functions. The mean trajectory, $\mu(t_i)$, is a superposition of a smoothly varying baseline trend and a synthesized, structured noise signal, as shown in @eq-mean-model.
+The core of the model lies in the mechanistic construction of these two components from a shared set of underlying dynamic functions. The mean trajectory, $\mu(t_i)$, is a superposition of a smoothly varying baseline trend and a synthesized, structured noise signal, as shown in @eq-mean-model.
 
 $$
 \mu(t_i)
@@ -72,9 +72,9 @@ $$
 \underbrace{A(t_i) \cdot \sum_{j=1}^{J} p_j(t_i) \cdot S_j(t_i)}_{\substack{\text{Unit-Variance Structured Noise}}}
 $${#eq-mean-model}
 
-Here, $\mathrm{RR}(t_i)$ represents the gross, underlying heart period trajectory. The structured noise component is synthesized from a set of spectral oscillators, $S_j(t_i)$, which represent activity in different physiological frequency bands ($j=1,2,3$ for VLF, LF, and HF, respectively). These oscillators are weighted by time-varying proportions, $p_j(t_i)$. Their combined magnitude is governed by an internal amplitude normalization factor, $A(t_i)$, which ensures this entire structured component has a standard deviation of exactly one at all times.
+Here, $\mathrm{RR}(t_i)$ represents the gross, underlying heart period trajectory. The structured noise component is synthesized from a set of spectral oscillators, $S_j(t_i)$, which represent activity in different physiological frequency bands ($j=1,2,3$ for VLF, LF, and HF, respectively). These oscillators are weighted by time-varying proportions, $p_j(t_i)$. Their combined magnitude is controlled by an internal amplitude normalization factor, $A(t_i)$, which ensures this entire structured component has a standard deviation of exactly one at all times.
 
-The model's second primary output, the $\mathrm{SDNN}(t_i)$ trajectory, represents the total instantaneous standard deviation of the RRi signal. By directly modeling this quantity and supplying it to the likelihood, the framework parsimoniously captures the complete time-dependent evolution of heart rate variability without needing to estimate a separate residual error term. This formulation facilitates a unified analysis that simultaneously captures phenomena in both the time and frequency domains, obviating the need for traditional sliding-window decompositions.
+The model's second primary output, the $\mathrm{SDNN}(t_i)$ trajectory, represents the total instantaneous standard deviation of the RRi signal. By directly modeling this quantity and supplying it to the likelihood, the framework captures the complete time-dependent evolution of heart rate variability without needing to estimate a separate residual error term. This formulation facilitates a unified analysis that simultaneously captures phenomena in both the time and frequency domains, obviating the need for traditional sliding-window decompositions.
 
 ### Baseline Heart Period: $\mathrm{RR}(t_i)$
 
@@ -98,7 +98,7 @@ $$
 \end{aligned}
 $${#eq-logistic-components}
 
-The shared timing parameters govern these transitions: $\tau$ is the inflection point (midpoint) of the initial decline, whose rate is controlled by $\lambda$. The second transition is offset from the first by a delay $\delta$. This delay is dynamically constrained to ensure the recovery point $\tau+\delta$ occurs within the observation window. The recovery rate is governed by $\phi$. This specific formulation directly estimates physiologically salient time points and magnitudes, facilitating enhanced mechanistic interpretation and improved comparability across different experimental conditions.
+The shared timing parameters govern these transitions: $\tau$ is the inflection point (midpoint) of the initial decline, whose rate is controlled by $\lambda$. The second transition is offset from the first by a delay $\delta$. This delay is dynamically constrained to ensure the recovery point $\tau+\delta$ occurs within the observation window. The recovery rate is determined by $\phi$. This specific formulation directly estimates physiologically salient time points and magnitudes, facilitating enhanced mechanistic interpretation and improved comparability across different experimental conditions.
 
 ### Generative Model for Signal Variability
 
